<resources>
    <string name="app_name">免费全本小说</string>

    <!--书架页面相关-->
    <string name="fragment_shouye_bookname">书名</string>
    <string name="fragment_shouye_author">作者</string>
    <string name="fragment_shouye_time">更新时间</string>
    <string name="fragment_shouye_status">已完结</string>
    <string name="fragment_shouye_read">继续阅读</string>
    <string name="fragment_shouye_addcase">加入书架</string>
    <string name="item_rv_bookcase_bookname">书名</string>

    <!--书城页面相关-->
    <string name="fragment_find_searche">搜索</string>


    <!--阅读页面相关-->

    <string name="book_read_change_source">换源</string>
    <string name="book_read_mode_day">夜间</string>
    <string name="book_read_mode_day_manual_setting">日间</string>
    <string name="book_read_mode_night_manual_setting">夜间</string>
    <string name="book_read_settings">设置</string>
    <string name="book_read_download">缓存</string>
    <string name="book_read_toc">目录</string>
    <string name="tv_pp_download_cacheselction">缓存章节</string>
    <string name="tv_pp_download_cacheall">缓存全本</string>
    <string name="tv_pp_download_cacheleave">缓存剩余章节</string>
    <string name="tv_pp_download_cachefive">缓存后面50章</string>
    <string name="directory">目录</string>
    <string name="close">关闭</string>

    <!--书本详情界面-->
    <string name="tv_addbookcase_introduce">简介:</string>

    <string name="fragment_my_disclaimer">免责声明</string>
    <string name="fragment_my_download">下载管理</string>


</resources>
