<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/transparent"
              android:orientation="vertical"
              android:padding="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bottom_top_line"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/tv_pp_download_cacheselction"
            android:textColor="@color/shouye_lv_tv"
            android:textSize="13sp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lv_divider"></View>

        <TextView
            android:id="@+id/tv_pp_download_cacheall"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/tv_pp_download_cacheall"
            android:textColor="@color/bg_blue"
            android:textSize="16sp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lv_divider"></View>

        <TextView
            android:id="@+id/tv_pp_download_cachefive"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/tv_pp_download_cachefive"
            android:textColor="@color/bg_blue"
            android:textSize="16sp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lv_divider"></View>

        <TextView
            android:id="@+id/tv_pp_download_cacheleave"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/tv_pp_download_cacheleave"
            android:textColor="@color/bg_blue"
            android:textSize="16sp"
            />


    </LinearLayout>

    <TextView
        android:id="@+id/tv_pp_download_cancel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_bottom_top_line"
        android:gravity="center"
        android:text="取消"
        android:textColor="@color/bg_blue"
        android:textSize="16sp"
        />

</LinearLayout>
